# DaVinciBot-FrenchRoboticsCup

./: .travis.yml  README.md  cluster.sh  networkinfo.txt  requirements.txt  startup.sh
Firmware/Arduino PID/: Carte centrale 2 capteurs + tirette.txt  Code roue droite coté violet.txt  Code roue gauche coté violet.txt  LastPIDTeeny.txt
Firmware/N1Teensy/include/: config.h
Firmware/N1Teensy/src/: main.cpp
Firmware/N1complete/include/: config.h  header.h
Firmware/N1complete/src/: main.cpp
Firmware/N1lte/include/: config.h  header.h
Firmware/N1lte/src/: main.cpp
Firmware/N1new/include/: config.h
Firmware/N1simple/include/: config.h  header.h
Firmware/N1simple/src/: main.cpp
Firmware/N2Teensy/include/: config.h  header.h
Firmware/N2Teensy/src/: main.cpp
Firmware/N2complete/: platformio.ini
Firmware/N2complete/include/: config.h  header.h
Firmware/N2complete/src/: main.cpp
Firmware/N2lte/include/: config.h  header.h
Firmware/N2lte/src/: main.cpp
Firmware/N2simple/include/: config.h  header.h
Firmware/N2simple/src/: main.cpp
Firmware/PIDTeensy/include/: config.h  header.h
Firmware/PIDTeensy/src/: main.cpp
Firmware/PID_WheelLeft/: platformio.ini
Firmware/PID_WheelLeft/src/: CodeLeft.cpp  PidLeft_RobotLesb.cpp  PidLeft_RobotNoir.cpp  pidLeft.cpp
Firmware/PID_WheelRight/src/: CodeRight.cpp  PID_Right.cpp  PidRight_RobotLesb.cpp  PidRight_RobotNoir.cpp
Firmware/Tester teensy pcb/src/: main.cpp
Firmware/Ultrason_v2/: platformio.ini
Firmware/Ultrason_v2/include/: config.h  header.h  ultra.cpp
Firmware/Ultrason_v2/src/: main.cpp
Firmware/Ultrasonic/: platformio.ini
Firmware/Ultrasonic/src/: main.cpp  test.cpp
Firmware/actioneur_cdr/: platformio.ini
Firmware/actioneur_cdr/src/: main.cpp
Firmware/controlleurservos/: platformio.ini
Firmware/controlleurservos/src/: main.cpp
Firmware/indiciel/include/: config.h  header.h
Firmware/indiciel/src/: main.cpp
Firmware/interface/: platformio.ini
Firmware/interface/src/: main.cpp
Firmware/leftTeensy/include/: config.h  header.h
Firmware/liteComplete/include/: configN1.h
Firmware/liteComplete/src/: main.cpp
Firmware/param_server_test/: platformio.ini
Firmware/param_server_test/src/: main.cpp
Firmware/rightTeensy/include/: config.h  header.h
Firmware/rightTeensy/src/: main.cpp
Firmware/servos controller/: platformio.ini
PID_TEENSY/src/: main.cpp  teensy 3.2 .cpp  teensy 3.5.cpp  teensy 3.5.ino
PID_WheelLeft/src/: pidLeft.cpp
PID_WheelRight/src/: PID_LEFT.cpp
Teensy PID/WheelLeft_Teensy3.5/: WheelLeft_Teensy3.5.ino
Teensy PID/WheelLeft_Teensy32/: WheelLeft_Teensy32.ino
Teensy PID/WheelRight_Teensy3.5/: WheelRight_Teensy3.5.ino
Teensy PID/WheelRight_Teensy32/: WheelRight_Teensy32.ino
cdr_robot_ws/: .gitignore  .stucture.png.swp  README.md
cdr_robot_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
cdr_robot_ws/launch/: gui.launch  setupIP.sh  simu.launch  visu.launch
cdr_robot_ws/launch/irl/: center.launch  (+4 more)
cdr_robot_ws/src/deplacement/: CMakeLists.txt  package.xml
cdr_robot_ws/src/deplacement/cfg/: Robot.cfg
cdr_robot_ws/src/deplacement/cfg/cpp/deplacement/: RobotConfig.h
cdr_robot_ws/src/deplacement/launch/: base.launch  noir_robot.launch  robot.launch  robot.launch.save  robot_test.laucnch  servo.launch  test_asser.launch
cdr_robot_ws/src/deplacement/src/: .strat.py.swp  .testSubscriver.cpp.swp  .test_tire.py.swp  Control.py  depart.cpp  depart.cpp.save  deplacement.cpp  drapeau.cpp  nodenulle.cpp  robotnoir.py  servo.py  stattest.py  strat.py.save  test.py  test_tire.py  test_tire.py.save  tets.cpp
(+458 files in other folders)
